# mat101-project1-template

./: CMakeLists.txt  README.md
.github/workflows/: classroom.yml
include/: exercises.h
scripts/: build.sh  check_structure.sh  test_all.sh  test_suite.sh
src/: exercises.cpp  main.cpp
tests/: doctest.h  test_exercises.cpp
